--- a/pkg/tmux/tmux.conf
+++ b/pkg/tmux/tmux.conf
@@ -17,6 +17,9 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
+# Setup mouse mode
+set -g mouse on 
+
 # Setup right status bar
 set -g status-right-length "60"
 set -g status-right "#{prefix_highlight}#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] #{battery_icon}#{battery_percentage}  #{cpu_icon} #{cpu_percentage} #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] %H:%M #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]#[fg=black,bg=cyan,bold] #H "
